# sendcure

./: .env.example  .gitignore  README.md  docker-compose.yml  traefik-dynamic.yml  traefik.yml  users.ldif
counter/: Cargo.toml  dockerfile
counter/settings/: development.example.toml
counter/src/: lib.rs  main.rs  prelude.rs  settings.rs  tui.rs
counter/src/event/: handler.rs  mod.rs
counter/src/model/: app.rs  common.rs  help_text.rs  input.rs  mod.rs
counter/src/model/popups/: mod.rs
counter/src/model/popups/login/: mod.rs  server_unavail.rs
counter/src/model/screens/: counter.rs  login.rs  mod.rs
counter/src/model/screens/counter/: mod.rs  recv_pkg.rs  send_pkg.rs
counter/src/ui/: err.rs  mod.rs  render.rs  utils.rs
counter/src/ui/popups/login/: successful.rs
counter/src/ui/screens/: counter.rs  login.rs  mod.rs
counter/src/ui/screens/counter/: mod.rs  no_client.rs  recv_pkg.rs  send_pkg.rs
counter/src/update/: common.rs  handler.rs  mod.rs
counter/src/update/app/: enter_screen.rs  mod.rs
counter/src/update/common/: input.rs  mod.rs  navigation.rs  quit.rs
counter/src/update/popups/login/: mod.rs  successful.rs
counter/src/update/screens/: login.rs
counter/src/update/screens/counter/: mod.rs  navigation.rs  recv_pkg.rs  send_pkg.rs
counter/src/update/screens/login/: enter_popup.rs  login.rs  mod.rs
custom_ldif/: users.ldif
front/: .gitignore  package.json
main-server/: dockerfile  package-lock.json  package.json  tsconfig.json
migrations/: 00_tables.sql  01_mock_data.sql
shipment/: README.md  dockerfile  main.py  (+2 more)
(+36 files in other folders)
