[package]
name = "counter"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
config = { version = "0.15.19", features = ["toml"] }
crossterm = "0.29.0"
ratatui = "0.30.0"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
strum = { version = "0.27.2", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
tui-input = "0.15.0"
